--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
         "@angular/platform-browser": "7.2.2",
         "@angular/platform-browser-dynamic": "7.2.2",
         "@angular/router": "7.2.2",
+        "@cloudinary/angular-5.x": "^1.0.2",
         "@fortawesome/angular-fontawesome": "0.3.0",
         "@fortawesome/fontawesome-svg-core": "1.2.12",
         "@fortawesome/free-solid-svg-icons": "5.6.3",
         "@ng-bootstrap/ng-bootstrap": "4.0.1",
         "@ngx-translate/core": "11.0.1",
         "@ngx-translate/http-loader": "4.0.0",
+        "aws-sdk": "^2.421.0",
         "bootstrap": "^4.2.1",
+        "cloudinary-core": "^2.6.2",
         "core-js": "2.6.3",
         "moment": "2.24.0",
         "ng-jhipster": "0.9.1",
