--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -51,10 +51,18 @@ spring:
     liquibase:
         contexts: prod
     mail:
-        host: localhost
-        port: 25
-        username:
-        password:
+        host: smtp.gmail.com
+        port: 587
+        username: palaverAppMail@gmail.com  #Replace this field with your Gmail username.
+        password: 12345palaver           #Replace this field with your Gmail password.
+        protocol: smtp
+        tls: true
+        properties.mail.smtp:
+            auth: true
+            starttls.enable: true
+            ssl.trust: smtp.gmail.com
+        messages:
+            cache-duration: PT1S # 1 second, see the ISO 8601 standard
     thymeleaf:
         cache: true
 
