--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -121,7 +121,7 @@ jhipster:
                 token-validity-in-seconds-for-remember-me: 2592000
     mail: # specific JHipster mail property, for standard properties see MailProperties
         from: palaver@localhost
-        base-url: http://my-server-url-to-change # Modify according to your server's URL
+        base-url: http://app-palaver-release.herokuapp.com # Modify according to your server's URL
     metrics:
         logs: # Reports metrics in the logs
             enabled: false
