--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "node_modules"
     ],
     "dependencies": {
+        "@angular/animations": "^7.2.2",
         "@angular/common": "7.2.2",
         "@angular/compiler": "7.2.2",
         "@angular/core": "7.2.2",
@@ -22,15 +23,20 @@
         "@ng-bootstrap/ng-bootstrap": "4.0.1",
         "@ngx-translate/core": "11.0.1",
         "@ngx-translate/http-loader": "4.0.0",
+        "acorn": "^6.1.1",
+        "ajv": "^6.10.0",
+        "angular-calendar": "^0.26.7",
         "aws-sdk": "^2.421.0",
         "bootstrap": "^4.2.1",
         "cloudinary-core": "^2.6.2",
         "core-js": "2.6.3",
+        "jquery": "^1.9.1",
         "moment": "2.24.0",
         "ng-jhipster": "0.9.1",
         "ngx-cookie": "2.0.1",
         "ngx-infinite-scroll": "7.0.1",
-        "ngx-webstorage": "2.0.1",
+        "ngx-webstorage": "^2.0.1",
+        "popper.js": "^1.14.7",
         "rxjs": "6.3.3",
         "swagger-ui": "2.2.10",
         "tslib": "1.9.3",
