--- a/package.json
+++ b/package.json
@@ -23,15 +23,18 @@
         "@ng-bootstrap/ng-bootstrap": "4.0.1",
         "@ngx-translate/core": "11.0.1",
         "@ngx-translate/http-loader": "4.0.0",
+        "@types/chartist": "^0.9.44",
         "acorn": "^6.1.1",
         "ajv": "^6.10.0",
         "angular-calendar": "^0.26.7",
         "aws-sdk": "^2.421.0",
         "bootstrap": "^4.2.1",
+        "chartist": "^0.11.0",
         "cloudinary-core": "^2.6.2",
         "core-js": "2.6.3",
         "jquery": "^1.9.1",
         "moment": "2.24.0",
+        "ng-chartist": "^4.1.0",
         "ng-jhipster": "0.9.1",
         "ng2-dragula": "^2.1.1",
         "ngx-cookie": "2.0.1",
