--- a/src/main/resources/config/application-dev.yml
+++ b/src/main/resources/config/application-dev.yml
@@ -109,7 +109,7 @@ jhipster:
                 token-validity-in-seconds-for-remember-me: 2592000
     mail: # specific JHipster mail property, for standard properties see MailProperties
         from: palaver@localhost
-        base-url: http://127.0.0.1:8080
+        base-url: https://127.0.0.1:8080
     metrics:
         logs: # Reports metrics in the logs
             enabled: false
