--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "ng-jhipster": "0.9.1",
         "ng2-dragula": "^2.1.1",
         "ng2-search-filter": "^0.4.7",
+        "ng2-toastr": "^4.1.2",
         "ngx-clipboard": "^12.0.0",
         "ngx-cookie": "2.0.1",
         "ngx-infinite-scroll": "7.0.1",
