--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
         "chartist": "^0.11.0",
         "cloudinary-core": "^2.6.2",
         "core-js": "2.6.3",
+        "fine-uploader": "^5.16.2",
         "jquery": "^1.9.1",
         "moment": "2.24.0",
         "ng-chartist": "^4.1.0",
