--- a/package.json
+++ b/package.json
@@ -23,7 +23,6 @@
         "@ng-bootstrap/ng-bootstrap": "4.0.1",
         "@ngx-translate/core": "11.0.1",
         "@ngx-translate/http-loader": "4.0.0",
-        "@types/chartist": "^0.9.44",
         "acorn": "^6.1.1",
         "ajv": "^6.10.0",
         "angular-calendar": "^0.26.11",
@@ -45,7 +44,9 @@
         "ngx-webstorage": "2.0.1",
         "popper.js": "^1.14.7",
         "rxjs": "6.3.3",
+        "simple-line-icons": "^2.4.1",
         "swagger-ui": "2.2.10",
+        "sweetalert2": "^8.8.1",
         "tslib": "1.9.3",
         "zone.js": "0.8.29"
     },
@@ -53,6 +54,7 @@
         "@angular/cli": "7.2.3",
         "@angular/compiler-cli": "7.2.2",
         "@ngtools/webpack": "7.2.3",
+        "@types/chartist": "^0.9.44",
         "@types/jest": "23.3.13",
         "@types/node": "10.12.18",
         "angular-router-loader": "0.8.5",
